[package]
name = "plykit"
version = "0.1.1"
authors = ["Jan Algermissen <algermissen@acm.org>"]
edition = "2018"
license = "Apache-2.0"

documentation = "https://docs.rs/plykit/0.1.1"
repository = "https://github.com/plykit/ply-rust"
homepage = "https://github.com/plykit/ply-rust"
description = """
Implementation of ply specification.
"""
readme = "README.md"
keywords = ["ply"]


[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
